refactor:all the components

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 }
 
 header{
-    background: turquoise;
     border-radius: 0.5rem;
     grid-area: header;
 }
@@ -30,8 +29,7 @@ header{
 aside{
     grid-area: aside;
     height: 100%;
-    position: sticky;
-    top: 0;
+    position: fixed;
     background: rgb(51, 151, 209);
     display: flex;
     flex-direction: column;
@@ -56,7 +54,6 @@ aside{
 
 
 main{
-    background-color: skyblue;
     grid-area: main;
 }
 
