--- a/style.css
+++ b/style.css
@@ -99,16 +99,11 @@ iframe{
     }
 }
 
-
-
-
-/* Avatar styling from here */
-
 .Main-Heading{
     font-family: 'Lato';
     font-size: 2rem;
     padding: 0.5rem;
-    color: rgb(51, 151, 209);
+    color: var(--main-color);
     max-width: 900px;
     margin: auto;
     margin-top: 2rem;
@@ -145,10 +140,8 @@ iframe{
     font-family: 'Lato';
     padding: 0.5rem;
     border: 1px solid rgb(121, 211, 246);
-    max-width: 900px;
+    max-width: 700px;
     margin: auto;
-    margin-left: 1rem;
-    margin-right: 1rem;
     display: block;
     border-radius: 0.5rem;
 }
