--- a/component.css
+++ b/component.css
@@ -5,7 +5,9 @@
 
 .Avatar{
     border: 1px solid rgb(121, 211, 246);
-    margin: 1rem;
+    margin: auto;
+    max-width: 700px;
+    display: block;
 }
 
 .Avatar img{
