--- a/component.css
+++ b/component.css
@@ -509,10 +509,21 @@ input{
     border: 1px solid rgb(89, 185, 209);
     border-radius: 0.5rem;
     padding: 0.7rem;
-    max-width: 900px;
+    max-width: 700px;
     margin: auto;
     display: block;
     margin-bottom: 0.5rem;
+    max-height: fit-content;
+}
+
+.imageContainer1{
+    border: 1px solid rgb(89, 185, 209);
+    border-radius: 0.5rem;
+    max-width: 700px;
+    margin: auto;
+    display: block;
+    padding: 4rem;
+    height: 30%;
 }
 
 .image{
