fix:some styling issues

--- a/component.css
+++ b/component.css
@@ -1,17 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 /*Avatar Styling Begins */
-
+:root{
+    --main-color:rgb(121, 211, 246)
+}
 
 .Avatar{
-    border: 1px solid rgb(121, 211, 246);
+    border: 1px solid var(--main-color);
     margin: auto;
     max-width: 700px;
     display: block;
 }
 
 .Avatar img{
-    border: 1px solid rgb(121, 211, 246);
+    border: 1px solid var(--main-color);
     border-radius: 50rem;
     height: 3.5rem;
     width: 3.5rem;
@@ -21,6 +23,38 @@
 /* Avatar Styling Ends */
 
 /* Alert Styling Starts */
+
+
+.alertContainer{
+    font-family: 'Lato';
+    padding: 0.5rem;
+    border: 1px solid var(--main-color);
+    max-width: 700px;
+    margin: auto;
+    display: block;
+    border-radius: 0.5rem;
+}
+
+.alertContent{
+    display: flex;
+    flex-direction: row;
+    background: rgb(246, 169, 169);
+}
+
+.alertIcon{
+    height: 2rem;
+    width: 2rem;
+    margin: 0.5rem;
+}
+
+.alertDescription{
+    float: right;
+    font-size: 1rem;
+    margin: 0.5rem;
+    font-weight: 500;
+    font-family: 'Lato';
+}
+
 
 .alertStatusContainer{
     border: 1px solid  rgb(121, 211, 246);
@@ -118,7 +152,7 @@
     border-radius: 0.5rem;
     padding:0.5rem;
     display: block;
-    max-width: 900px;
+    max-width: 700px;
     margin: auto;
 }
 
@@ -221,13 +255,13 @@
     padding: 0.5rem;
     border: 2px solid rgb(121, 211, 246);
     border-radius: 0.5rem;
-    max-width: 900px;
+    max-width: 800px;
     margin: auto;
     display: block;
 }
 
 .card{
-    max-width: 400px;
+    max-width: 700px;
     margin: auto;
     display: block;
 }
@@ -386,7 +420,7 @@
     border-radius: 0.5rem;
     display: flex;
     flex-direction: row;
-    max-width: 600px;
+    max-width: 800px;
 }
 
 .vertical-container1{
@@ -522,8 +556,7 @@ input{
     max-width: 700px;
     margin: auto;
     display: block;
-    padding: 4rem;
-    height: 30%;
+    height: 25vh
 }
 
 .image{
@@ -562,6 +595,7 @@ input{
 .horizontal2{
     float: right;
     margin: 1rem;
+    
 }
 
 /* List styling here */
@@ -714,10 +748,10 @@ input{
     border: 1px solid rgb(89, 185, 209) ;
     padding: 1rem;
     border-radius: 0.5rem;
-    max-width: 900px;
+    max-width: 700px;
     display: block;
     margin: auto;
-    width: 80%;
+    width: 100%
     margin-bottom: 0.5rem;
 }
 
