--- a/component.css
+++ b/component.css
@@ -57,7 +57,7 @@
 
 
 .alertStatusContainer{
-    border: 1px solid  rgb(121, 211, 246);
+    border: 1px solid  var(--main-color);
     max-width: 700px;
     margin: auto;
     display: block;
@@ -91,7 +91,7 @@
     display: block;
     max-width: 700px;
     margin: auto;
-    border: 1px solid rgb(121, 211, 246);
+    border: 1px solid var(--main-color);
     border-radius: 0.5rem;
     padding: 0.5rem;
     margin-bottom: 1rem;
@@ -148,7 +148,7 @@
 /* Button Styling Starts */
 
 .ButtonContainer{
-    border: 1px solid rgb(121, 211, 246);
+    border: 1px solid var(--main-color);
     border-radius: 0.5rem;
     padding:0.5rem;
     display: block;
@@ -253,7 +253,7 @@
 
 .cardContainer{
     padding: 0.5rem;
-    border: 2px solid rgb(121, 211, 246);
+    border: 2px solid var(--main-color);
     border-radius: 0.5rem;
     max-width: 800px;
     margin: auto;
