--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ aside{
     grid-area: aside;
     height: 100%;
     position: fixed;
-    background: var(--main-color);
+    background: rgb(11, 189, 221);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -154,7 +154,7 @@ footer{
 }
 
 iframe{
-    max-width: 700px;
+    max-width: 600px;
     display: block;
     margin: auto;
     margin-top: 1rem;
@@ -177,6 +177,7 @@ iframe{
     aside{
         position: sticky;
         top: 0;
+        max-width: 600px;
     }
 
     /* this is just hit and trail */
