--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav li:hover{
     left: 20px;
     font-family: 'Playfair Display';
     color: Black;
-    text-transform: capitalize
+    text-transform: capitalize;
     cursor: pointer;
     font-weight: 400;
 
